--- a/products/tea.html
+++ b/products/tea.html
@@ -151,7 +151,7 @@
         <div class="container mx-auto px-6 py-12">
             <div class="max-w-3xl">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">Two Decades of Excellence in Tea Production</h1>
-                <p class="text-lg mb-6 leading-relaxed">Trusted by global partners for consistently delivering premium Indonesian tea since 2004. Our expertise ensures exceptional quality in every harvest.</p>
+                <p class="text-lg mb-6 leading-relaxed">Trusted by global partners for consistently delivering Indonesian tea since 2004.</p>
                 <div class="flex flex-wrap gap-4">
                     <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-3 rounded-xl transition duration-300 inline-flex items-center">
                         <i class="fab fa-whatsapp text-xl mr-2"></i> Order Now
@@ -261,7 +261,7 @@
 
                 <!-- Product Information -->
                 <div class="lg:w-1/2">
-                    <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span>
+                    <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Black Tea</h2>
                     <p class="text-gray-600 text-lg mb-8">Our premium black tea offers a rich, full-bodied flavor with malty notes and a smooth finish. Carefully processed from mature tea leaves, it's perfect for various applications from premium tea bags to ready-to-drink beverages.</p>
 
@@ -364,100 +364,103 @@
     </section>
 
     <!-- How to Order Section -->
-    <section id="how-to-order" class="py-20">
+    <section id="how-to-order" class="py-16">
         <div class="container mx-auto px-6">
-            <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold text-primary mb-6">How to Order</h2>
-                <p class="text-gray-600 text-lg max-w-3xl mx-auto">Our streamlined ordering process ensures quality and satisfaction at every step:</p>
+            <div class="text-center mb-12">
+                <h2 class="text-3xl font-bold text-primary mb-4">How to Order</h2>
+                <p class="text-gray-600 max-w-3xl mx-auto">Our streamlined ordering process ensures quality and satisfaction at every step:</p>
             </div>
 
-            <div class="max-w-3xl mx-auto mb-16">
+            <div class="max-w-3xl mx-auto mb-12">
                 <div class="relative">
                     <!-- Timeline line -->
-                    <div class="absolute left-1/2 transform -translate-x-1/2 h-full w-1 bg-primary/20"></div>
+                    <div class="absolute left-1/2 transform -translate-x-1/2 h-full w-0.5 bg-gray-200"></div>
                     
                     <!-- Steps -->
-                    <div class="space-y-12">
+                    <div class="space-y-8">
                         <!-- Step 1 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-comments text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-comments text-sm"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-8">
-                                <h3 class="text-xl font-semibold mb-2">Initial Contact</h3>
-                                <p class="text-gray-600">Contact us with your specific requirements</p>
+                            <div class="ml-auto w-5/12 pl-6">
+                                <h3 class="text-lg font-medium mb-1">Initial Contact</h3>
+                                <p class="text-gray-600 text-sm mb-2">Contact us with your specific requirements</p>
+                                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20discuss%20tea%20products" target="_blank" class="inline-flex items-center text-primary hover:text-accent text-sm font-medium">
+                                    <i class="fab fa-whatsapp mr-1"></i> Start Discussion
+                                </a>
                             </div>
                         </div>
 
                         <!-- Step 2 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-coffee text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-coffee text-sm"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-8 text-right">
-                                <h3 class="text-xl font-semibold mb-2">Product Discussion</h3>
-                                <p class="text-gray-600">Discuss aroma, taste, and appearance specifications</p>
+                            <div class="mr-auto w-5/12 pr-6 text-right">
+                                <h3 class="text-lg font-medium mb-1">Product Discussion</h3>
+                                <p class="text-gray-600 text-sm">Discuss aroma, taste, and appearance specifications</p>
                             </div>
                         </div>
 
                         <!-- Step 3 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary/60 rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-box-open text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary/60 rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-box-open text-sm"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-8">
+                            <div class="ml-auto w-5/12 pl-6">
                                 <div class="flex items-center gap-2 mb-1">
-                                    <h3 class="text-xl font-semibold">Sample Submission</h3>
-                                    <span class="bg-gray-100 text-gray-600 text-xs px-2 py-1 rounded-full">Optional</span>
+                                    <h3 class="text-lg font-medium">Sample Submission</h3>
+                                    <span class="bg-gray-100 text-gray-600 text-xs px-2 py-0.5 rounded-full">Optional</span>
                                 </div>
-                                <p class="text-gray-600">Submit your reference sample for matching, or proceed with our standard specifications</p>
+                                <p class="text-gray-600 text-sm">Submit your reference sample for matching, or proceed with our standard specifications</p>
                             </div>
                         </div>
 
                         <!-- Step 4 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary/60 rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-check-circle text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary/60 rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-check-circle text-sm"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-8 text-right">
+                            <div class="mr-auto w-5/12 pr-6 text-right">
                                 <div class="flex items-center justify-end gap-2 mb-1">
-                                    <span class="bg-gray-100 text-gray-600 text-xs px-2 py-1 rounded-full">Optional</span>
-                                    <h3 class="text-xl font-semibold">Sample Approval</h3>
+                                    <span class="bg-gray-100 text-gray-600 text-xs px-2 py-0.5 rounded-full">Optional</span>
+                                    <h3 class="text-lg font-medium">Sample Approval</h3>
                                 </div>
-                                <p class="text-gray-600">Review and approve our sample match, or proceed with our standard quality</p>
+                                <p class="text-gray-600 text-sm">Review and approve our sample match, or proceed with our standard quality</p>
                             </div>
                         </div>
 
                         <!-- Step 5 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-file-signature text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-file-signature text-sm"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-8">
-                                <h3 class="text-xl font-semibold mb-2">Order Confirmation</h3>
-                                <p class="text-gray-600">Sign sales order and complete payment</p>
+                            <div class="ml-auto w-5/12 pl-6">
+                                <h3 class="text-lg font-medium mb-1">Order Confirmation</h3>
+                                <p class="text-gray-600 text-sm">Sign sales order and complete payment</p>
                             </div>
                         </div>
 
                         <!-- Step 6 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-industry text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-industry text-sm"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-8 text-right">
-                                <h3 class="text-xl font-semibold mb-2">Production</h3>
-                                <p class="text-gray-600">We prepare your order with care</p>
+                            <div class="mr-auto w-5/12 pr-6 text-right">
+                                <h3 class="text-lg font-medium mb-1">Production</h3>
+                                <p class="text-gray-600 text-sm">We prepare your order with care</p>
                             </div>
                         </div>
 
                         <!-- Step 7 -->
                         <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-shipping-fast text-xl"></i>
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-shipping-fast text-sm"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-8">
-                                <h3 class="text-xl font-semibold mb-2">Shipment</h3>
-                                <p class="text-gray-600">Products ready for delivery</p>
+                            <div class="ml-auto w-5/12 pl-6">
+                                <h3 class="text-lg font-medium mb-1">Shipment</h3>
+                                <p class="text-gray-600 text-sm">Products ready for delivery</p>
                             </div>
                         </div>
                     </div>
@@ -465,36 +468,36 @@
             </div>
 
             <!-- Production Experience Gallery -->
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-16">
-                <div class="relative group overflow-hidden rounded-xl shadow-lg">
-                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing Facility" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-12">
+                <div class="relative group overflow-hidden rounded-lg shadow">
+                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing Facility" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4">State-of-the-art processing facility</p>
+                        <p class="text-white text-center px-4 text-sm">State-of-the-art processing facility</p>
                     </div>
                 </div>
-                <div class="relative group overflow-hidden rounded-xl shadow-lg">
-                    <img src="../assets/images/tea-quality.jpg" alt="Quality Control Process" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                <div class="relative group overflow-hidden rounded-lg shadow">
+                    <img src="../assets/images/tea-quality.jpg" alt="Quality Control Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4">Rigorous quality control</p>
+                        <p class="text-white text-center px-4 text-sm">Rigorous quality control</p>
                     </div>
                 </div>
-                <div class="relative group overflow-hidden rounded-xl shadow-lg">
-                    <img src="../assets/images/tea-packaging.jpg" alt="Packaging Process" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                <div class="relative group overflow-hidden rounded-lg shadow">
+                    <img src="../assets/images/tea-packaging.jpg" alt="Packaging Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4">Professional packaging</p>
+                        <p class="text-white text-center px-4 text-sm">Professional packaging</p>
                     </div>
                 </div>
-                <div class="relative group overflow-hidden rounded-xl shadow-lg">
-                    <img src="../assets/images/tea-shipping.jpg" alt="Shipping Process" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                <div class="relative group overflow-hidden rounded-lg shadow">
+                    <img src="../assets/images/tea-shipping.jpg" alt="Shipping Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4">Efficient shipping process</p>
+                        <p class="text-white text-center px-4 text-sm">Efficient shipping process</p>
                     </div>
                 </div>
             </div>
 
             <div class="text-center">
-                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20know%20more%20about%20ordering%20process" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center">
-                    <i class="fab fa-whatsapp text-xl mr-2"></i> Start Your Order
+                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20know%20more%20about%20ordering%20process" target="_blank" class="bg-primary hover:bg-accent text-white px-6 py-2 rounded-lg transition duration-300 inline-flex items-center">
+                    <i class="fab fa-whatsapp text-lg mr-2"></i> Start Your Order
                 </a>
             </div>
         </div>
