complete assest tea product

--- a/products/tea.html
+++ b/products/tea.html
@@ -227,9 +227,9 @@
 
                 <!-- Visual Showcase -->
                 <div class="grid md:grid-cols-3 gap-6">
-                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing Facility" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/tea-packaging.jpg" alt="Tea Packaging Process" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/tea-quality.jpg" alt="Quality Control" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/tea-rolling.jpg" alt="Tea Rolling" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/tea-sorting.jpg" alt="Tea Sorting" class="rounded-xl shadow-lg h-48 w-full object-cover">
                 </div>
             </div>
         </div>
@@ -244,13 +244,16 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="../assets/images/black-tea-1.jpg" alt="Premium Indonesian Black Tea - Main View" class="w-full h-[500px] object-cover">
+                                <img src="../assets/images/black-tea-display.jpg" alt="Premium Indonesian Black Tea - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/black-tea-2.jpg" alt="Black Tea Processing" class="w-full h-[500px] object-cover">
+                                <img src="../assets/images/black-tea-close-up.jpg" alt="Black Tea Close Up" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/black-tea-3.jpg" alt="Black Tea Packaging" class="w-full h-[500px] object-cover">
+                                <img src="../assets/images/tea-brewed.jpg" alt="Black Tea Brewed" class="w-full h-[500px] object-cover">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="../assets/images/tea-shoots.jpg" alt="Tea Shoots" class="w-full h-[500px] object-cover">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -276,7 +279,8 @@
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Packaging</h4>
-                            <p class="text-gray-600">25kg bags</p>
+                            <p class="text-gray-600">25kg kraft paper bags</p>
+                            <p class="text-gray-400 text-xs mt-1 font-normal">Custom packaging available upon request</p>
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Shelf Life</h4>
@@ -320,7 +324,8 @@
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Packaging</h4>
-                            <p class="text-gray-600">25kg bags</p>
+                            <p class="text-gray-600">25kg kraft paper bags</p>
+                            <p class="text-gray-400 text-xs mt-1 font-normal">Custom packaging available upon request</p>
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Shelf Life</h4>
@@ -345,13 +350,10 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="../assets/images/green-tea-1.jpg" alt="Premium Indonesian Green Tea - Main View" class="w-full h-[500px] object-cover">
+                                <img src="../assets/images/green-tea.jpg" alt="Premium Indonesian Green Tea - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/green-tea-2.jpg" alt="Green Tea Processing" class="w-full h-[500px] object-cover">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="../assets/images/green-tea-3.jpg" alt="Green Tea Packaging" class="w-full h-[500px] object-cover">
+                                <img src="../assets/images/green-tea-roasted.jpg" alt="Green Tea Roasted" class="w-full h-[500px] object-cover">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -470,27 +472,27 @@
             <!-- Production Experience Gallery -->
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-12">
                 <div class="relative group overflow-hidden rounded-lg shadow">
-                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing Facility" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
+                    <img src="../assets/images/tea-premium.jpg" alt="Tea Premium" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4 text-sm">State-of-the-art processing facility</p>
+                        <p class="text-white text-center px-4 text-sm">Custom Aroma</p>
                     </div>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg shadow">
-                    <img src="../assets/images/tea-quality.jpg" alt="Quality Control Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
+                    <img src="../assets/images/tea-variant.jpg" alt="Tea Variant" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4 text-sm">Rigorous quality control</p>
+                        <p class="text-white text-center px-4 text-sm">Tea Variety</p>
                     </div>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg shadow">
-                    <img src="../assets/images/tea-packaging.jpg" alt="Packaging Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
+                    <img src="../assets/images/tea-export.jpg" alt="Tea Export" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4 text-sm">Professional packaging</p>
+                        <p class="text-white text-center px-4 text-sm">Tea Export</p>
                     </div>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg shadow">
-                    <img src="../assets/images/tea-shipping.jpg" alt="Shipping Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
+                    <img src="../assets/images/tea-loading-bulk.jpg" alt="Loading Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4 text-sm">Efficient shipping process</p>
+                        <p class="text-white text-center px-4 text-sm">Loading Bulk</p>
                     </div>
                 </div>
             </div>
@@ -511,11 +513,12 @@
                 <p class="text-gray-600 text-lg max-w-3xl mx-auto">We maintain the highest standards of quality and safety, backed by international certifications:</p>
             </div>
 
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 items-center justify-items-center">
-                <img src="../assets/images/cert-iso.png" alt="ISO 22000 Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/cert-haccp.png" alt="HACCP Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/cert-halal.png" alt="Halal Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/cert-organic.png" alt="Organic Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+            <div class="grid grid-cols-2 md:grid-cols-5 gap-8 items-center justify-items-center">
+                <img src="../assets/images/100-pure.png" alt="100% Pure" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="../assets/images/haccp.png" alt="HACCP Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="../assets/images/gmo-stamp.png" alt="GMO Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="../assets/images/pesticide-free.png" alt="Pesticide Free" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="../assets/images/halal-logo.webp" alt="Halal Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
             </div>
         </div>
     </section>
