adjust button CTA

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
             <nav class="flex flex-col space-y-4">
                 <a href="#" class="font-medium text-primary hover:text-accent">Home</a>
                 <a href="#about" class="font-medium hover:text-primary">About Us</a>
-                <a href="#tea-products" class="font-medium hover:text-primary">Tea Products</a>
-                <a href="#essential-oils" class="font-medium hover:text-primary">Essential Oils</a>
+                <a href="#products" class="font-medium hover:text-primary">Products</a>
                 <a href="#contact" class="font-medium hover:text-primary">Contact</a>
             </nav>
         </div>
@@ -152,8 +151,7 @@
             <nav class="hidden md:flex space-x-6">
                 <a href="#" class="font-medium hover:text-primary">Home</a>
                 <a href="#about" class="font-medium hover:text-primary">About Us</a>
-                <a href="#tea-products" class="font-medium hover:text-primary">Tea Products</a>
-                <a href="#essential-oils" class="font-medium hover:text-primary">Essential Oils</a>
+                <a href="#products" class="font-medium hover:text-primary">Products</a>
                 <a href="#contact" class="font-medium hover:text-primary">Contact</a>
             </nav>
             <button id="menuButton" class="md:hidden text-2xl text-primary"><i class="fas fa-bars"></i></button>
@@ -298,10 +296,10 @@
                         </div>
 
                         <div class="flex justify-between items-center">
-                            <a href="/products/tea" class="inline-flex items-center text-primary hover:text-accent font-medium">
-                                View Tea Products <i class="fas fa-arrow-right ml-2"></i>
+                            <a href="/products/tea.html" class="inline-flex items-center bg-primary/10 hover:bg-primary/20 text-primary px-6 py-3 rounded-lg transition duration-300 font-medium">
+                                <i class="fas fa-leaf mr-2"></i> Explore Tea Products
                             </a>
-                            <a href="#contact" class="bg-primary hover:bg-accent text-white px-6 py-2 rounded-lg transition duration-300">
+                            <a href="#contact" class="bg-primary hover:bg-accent text-white px-6 py-3 rounded-lg transition duration-300">
                                 Get Quote
                             </a>
                         </div>
@@ -339,10 +337,10 @@
                         </div>
 
                         <div class="flex justify-between items-center">
-                            <a href="/products/essential-oils" class="inline-flex items-center text-primary hover:text-accent font-medium">
-                                View Essential Oils <i class="fas fa-arrow-right ml-2"></i>
+                            <a href="/products/essential-oils.html" class="inline-flex items-center bg-secondary/10 hover:bg-secondary/20 text-secondary px-6 py-3 rounded-lg transition duration-300 font-medium">
+                                <i class="fas fa-flask mr-2"></i> Explore Essential Oils
                             </a>
-                            <a href="#contact" class="bg-primary hover:bg-accent text-white px-6 py-2 rounded-lg transition duration-300">
+                            <a href="#contact" class="bg-primary hover:bg-accent text-white px-6 py-3 rounded-lg transition duration-300">
                                 Get Quote
                             </a>
                         </div>
