update tea capacity and images

--- a/index.html
+++ b/index.html
@@ -191,15 +191,10 @@
                     <h2 class="text-5xl font-bold text-primary mb-8">About Tropica Farmindo</h2>
                     <p class="text-gray-600 mb-8 text-lg leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:</p>
                     
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                         <div class="border-l-4 border-primary pl-6">
-                            <div class="text-4xl font-bold text-primary mb-1">180</div>
-                            <div class="text-gray-600">Tons of Black Tea</div>
-                            <div class="text-sm text-gray-500">Per Month</div>
-                        </div>
-                        <div class="border-l-4 border-primary pl-6">
-                            <div class="text-4xl font-bold text-primary mb-1">180</div>
-                            <div class="text-gray-600">Tons of Green Tea</div>
+                            <div class="text-4xl font-bold text-primary mb-1">150</div>
+                            <div class="text-gray-600">Tons of Tea</div>
                             <div class="text-sm text-gray-500">Per Month</div>
                         </div>
                         <div class="border-l-4 border-primary pl-6">
@@ -287,7 +282,7 @@
                         <div class="flex items-center justify-between mb-8">
                             <div>
                                 <h4 class="font-semibold text-gray-800 mb-2">Production Capacity</h4>
-                                <p class="text-gray-600">360 tons/month</p>
+                                <p class="text-gray-600">150 tons/month</p>
                             </div>
                             <div>
                                 <h4 class="font-semibold text-gray-800 mb-2">Minimum Order</h4>
