--- a/products/tea.html
+++ b/products/tea.html
@@ -209,7 +209,7 @@
                                 <div class="p-4 bg-primary/5 rounded-lg">
                                     <div class="flex justify-between items-center mb-2">
                                         <span class="font-medium">Monthly Production</span>
-                                        <span class="bg-primary/10 text-primary px-2 py-1 rounded text-sm">360 tons</span>
+                                        <span class="bg-primary/10 text-primary px-2 py-1 rounded text-sm">150 tons</span>
                                     </div>
                                     <p class="text-gray-600 text-sm">Combined capacity for both tea varieties</p>
                                 </div>
@@ -227,9 +227,9 @@
 
                 <!-- Visual Showcase -->
                 <div class="grid md:grid-cols-3 gap-6">
-                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/tea-rolling.jpg" alt="Tea Rolling" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/tea-harvesting.jpg" alt="Tea Harvesting" class="rounded-xl shadow-lg h-48 w-full object-cover">
                     <img src="../assets/images/tea-sorting.jpg" alt="Tea Sorting" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/black-tea-preview.jpg" alt="Black Tea Preview" class="rounded-xl shadow-lg h-48 w-full object-cover">
                 </div>
             </div>
         </div>
@@ -271,7 +271,7 @@
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Production Capacity</h4>
-                            <p class="text-gray-600">180 tons/month</p>
+                            <p class="text-gray-600">75 tons/month</p>
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Minimum Order</h4>
@@ -316,7 +316,7 @@
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Production Capacity</h4>
-                            <p class="text-gray-600">180 tons/month</p>
+                            <p class="text-gray-600">75 tons/month</p>
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Minimum Order</h4>
@@ -484,13 +484,13 @@
                     </div>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg shadow">
-                    <img src="../assets/images/tea-export.jpg" alt="Tea Export" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
+                    <img src="../assets/images/tea-bulk-packaging.jpg" alt="Tea Export" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                        <p class="text-white text-center px-4 text-sm">Tea Export</p>
+                        <p class="text-white text-center px-4 text-sm">Bulk Packaging</p>
                     </div>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg shadow">
-                    <img src="../assets/images/tea-loading-bulk.jpg" alt="Loading Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
+                    <img src="../assets/images/tea-loading.jpeg" alt="Loading Process" class="w-full h-48 object-cover transform group-hover:scale-105 transition duration-300">
                     <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
                         <p class="text-white text-center px-4 text-sm">Loading Bulk</p>
                     </div>
